[package]
name = "embedded-qmp6988"
version = "0.1.0"
authors = ["Ghislain MARY <ghislain@ghislainmary.fr>"]
repository = "https://github.com/ghismary/embedded-qmp6988"
license = "MIT OR Apache-2.0"
description = " Platform-agnostic Rust driver for the QMP6988 barometric pressure sensor."
documentation = "https://docs.rs/embedded-qmp6988/"
readme = "README.md"
keywords = ["pressure", "barometric", "sensor", "qmp6988", "embedded-hal"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/ghismary/embedded-qmp6988"
include = ["/**/*.rs", "/Cargo.toml", "/README.md"]
edition = "2021"

[features]
default = []
async = []

[dependencies]
embedded-hal = "1.0"
embedded-hal-async = "1.0"
maybe-async-cfg = "0.2"
micromath = "2.1"
weather-utils = { version = "0.4", features = ["no-std"] }

[dev-dependencies]
embedded-hal-mock = { version = "0.11", default-features = false, features = [
    "eh1",
] }
linux-embedded-hal = "0.4.0"
